# embedded

./: .gitignore  CMakeCommonSettings.cmake  CrossPlatform.cmake  README.md
Algorithms/BubbleSort/: BubbleSort.hpp  CMakeLists.txt  Main.cpp  README.md
Algorithms/BubbleSort/test/: BubbleSort.cbp  CMakeLists.txt  TEST_Float.cpp  TEST_Integer.cpp
Algorithms/MovingAverage/: CMakeLists.txt  Main.cpp  MovingAverage.hpp  README.md
Algorithms/MovingAverage/test/: CMakeLists.txt  MovingAverage.cbp  TEST_Fill.cpp  TEST_Float.cpp  TEST_Integer.cpp  TEST_Limits.cpp  TEST_LongRunning.cpp  TEST_Main.cpp  TEST_Resize.cpp
Algorithms/QuickSort/: CMakeLists.txt  Main.cpp  QuickSort.hpp  README.md
Algorithms/QuickSort/test/: CMakeLists.txt  QuickSort.cbp  TEST_Float.cpp  TEST_Integer.cpp  TEST_Main.cpp
Arbiter/: Arbiter.cbp  README.md
Arbiter/doxygen/: doxyfile
Arbiter/scr/: Application_Stub.cpp  Application_Stub.hpp  i2c_arbiter.cpp  i2c_arbiter.hpp  i2c_drv_stub.cpp  i2c_drv_stub.hpp  main.cpp
BitmaskEnum/: BitmaskEnum.hpp  CMakeLists.txt  Main.cpp  README.md
BitmaskEnum/test/: BitmaskEnum.cbp  CMakeLists.txt  ExampleEnum.hpp  TEST_AND.cpp  TEST_Invalid.cpp  TEST_Mixed.cpp  TEST_NOT.cpp  TEST_OR.cpp  TEST_XOR.cpp
Catch/: Readme.md
CircularFifo/: CircularFifo.hpp  README.md
ContiguousBuffer/: CMakeLists.txt  ContiguousRingbuffer.hpp  Main.cpp  README.md
ContiguousBuffer/test/: CMakeLists.txt  ContiguousRingbuffer.cbp  ContiguousRingbuffer.depend  ContiguousRingbuffer.hpp  TEST_Blocks.cpp  TEST_Capacity.cpp  TEST_Clear.cpp  TEST_HistoricalIssues.cpp  TEST_Peek.cpp  TEST_Poke.cpp  TEST_Read.cpp  TEST_Resize.cpp  TEST_Size.cpp  TEST_Speed.cpp  TEST_Threading.cpp  TEST_Wrap.cpp  TEST_Write.cpp  TEST_WriteAndRead.cpp  main.cpp
FloatToString/: README.md  float_to_string.c  float_to_string.h
HeapCheck/: README.md  heap_check.c  heap_check.h
Ringbuffer/: CMakeLists.txt  Main.cpp  README.md  Ringbuffer.hpp
Ringbuffer/test/: CMakeLists.txt  Ringbuffer.cbp  Ringbuffer.depend  Ringbuffer.hpp  TEST_Clear.cpp  TEST_DifferentElementTypes.cpp  TEST_Main.cpp  TEST_Peek.cpp  TEST_Poke.cpp  TEST_Resize.cpp  TEST_Size.cpp  TEST_Threading.cpp  TEST_TryPop.cpp  TEST_TryPush.cpp  TEST_TryPushAndTryPop.cpp
Sawtooth/: CMakeLists.txt  Main.cpp  README.md  Sawtooth.hpp
Sawtooth/test/: CMakeLists.txt  Sawtooth.cbp  TEST_Main.cpp  TEST_Ranges.cpp
SlimAssert/: CMakeLists.txt  Main.cpp  README.md  SlimAssert.h
SlimAssert/test/: SlimAssert.cbp  main.cpp
SoftTimer/: CMakeLists.txt  Main.cpp  README.md  SoftTimer.cpp  SoftTimer.hpp
SoftTimer/interfaces/: ISoftTimer.hpp
SoftTimer/test/: CMakeLists.txt  TestSoftTimer.cpp
SoftTimer/tests/: TestSoftTimer.cpp
StackPainting/: README.md  stack_painting.c  stack_painting.h
